--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -94,116 +94,249 @@
     "MM_Sticky": true
   },
   "permittedentities": {
-    "Creeper": true,
-    "ZombieLumberjackEntity": true,
+    "InvisicloggerEntity": true,
+    "EntityMurmurHead": true,
     "CrawlerEntity": true,
     "NeutralCreeper": true,
     "SluggerEntity": true,
-    "SiameseSkeletonsEntity": true,
+    "EquestrianEntity": true,
     "GoblinEntity": true,
+    "Forgotten": true,
+    "FlutterflyEntity": true,
+    "CorpseFlyEntity": true,
+    "MftfhangEntity": true,
+    "DoorKnightEntity": true,
+    "EnderMan": true,
+    "TheskeeperEntity": true,
+    "TrollEntity": true,
+    "EntityFoliaath": true,
+    "ThesomnolenceEntity": true,
+    "EntityTroll": true,
+    "BonescallerEntity": true,
+    "TheheavyEntity": true,
+    "MaggotEntity": true,
+    "PhantomCreeperEntity": true,
+    "LobberZombie": true,
+    "ThehorrorsdecoysEntity": true,
+    "HuntsmanEntity": true,
+    "TreantEntity": true,
+    "Zombie": true,
+    "SwarmerEntity": true,
+    "ZombieClownEntity": true,
+    "Lionfish_Entity": true,
+    "DireHoundLeaderEntity": true,
+    "DecrepitSkeletonEntity": true,
+    "Deepling_Angler_Entity": true,
+    "ZombieBruiserEntity": true,
+    "MutantSkeleton": true,
+    "ThepregnantEntity": true,
+    "Drowned": true,
+    "ZombieFishermanEntity": true,
+    "ThehorrorsEntity": true,
+    "MutantCreeper": true,
+    "ThehunterEntity": true,
+    "ZombieVillager": true,
+    "BarrelZombieEntity": true,
+    "ThesmokerEntity": true,
+    "MimicEntity": true,
+    "SprinterEntity": true,
+    "EntityWroughtnaut": true,
+    "SilverqueenattackingEntity": true,
+    "Creeper": true,
+    "ZombieLumberjackEntity": true,
+    "SupremeBonescallerEntity": true,
+    "TheordureEntity": true,
+    "EntityMurmur": true,
+    "ManaggresiveEntity": true,
+    "SiameseSkeletonsEntity": true,
+    "WaspEntity": true,
     "IntruderEntity": true,
     "CorpseFishEntity": true,
     "ThegliterEntity": true,
-    "CorpseFlyEntity": true,
-    "EnderMan": true,
-    "TheskeeperEntity": true,
     "FallenChaosKnightEntity": true,
-    "TrollEntity": true,
     "Skeleton": true,
     "BaseCreeper": true,
+    "GluttonFishEntity": true,
     "DarkVortexEntity": true,
-    "ThesomnolenceEntity": true,
-    "BonescallerEntity": true,
-    "PhantomCreeperEntity": true,
-    "LobberZombie": true,
+    "Witch": true,
+    "GoblinFearEntity": true,
     "INVISIBLEBIDYEntity": true,
+    "ThespitterEntity": true,
     "VampflyerEntity": true,
-    "ThehorrorsdecoysEntity": true,
+    "EntityCentipedeHead": true,
     "SkeletonDemomanEntity": true,
     "TherodEntity": true,
-    "Zombie": true,
+    "ManfromthefogEntity": true,
     "TheMoonflowerEntity": true,
-    "SwarmerEntity": true,
     "DirewolfEntity": true,
-    "ZombieClownEntity": true,
-    "DecrepitSkeletonEntity": true,
+    "Husk": true,
     "ZombifiedRabbit": true,
     "DecayingZombieEntity": true,
+    "ThebidyEntity": true,
     "DreadHoundEntity": true,
-    "ThepregnantEntity": true,
+    "Deepling_Brute_Entity": true,
     "PufferfishCreeper": true,
-    "Drowned": true,
     "VampireEntity": true,
+    "SkeletonThrasherEntity": true,
     "BoulderingZombie": true,
     "BabySkeletonEntity": true,
     "Spider": true,
     "RestlessSpiritEntity": true,
+    "TheswarmerEntity": true,
     "FallerEntity": true,
-    "SprinterEntity": true,
     "SunkenSkeletonEntity": true,
     "BomberEntity": true
   },
   "entitiesalwaysinfernal": {
-    "Creeper": false,
-    "ZombieLumberjackEntity": false,
+    "InvisicloggerEntity": false,
+    "EntityMurmurHead": false,
     "CrawlerEntity": false,
     "NeutralCreeper": false,
     "SluggerEntity": false,
-    "SiameseSkeletonsEntity": false,
+    "EquestrianEntity": false,
     "GoblinEntity": false,
+    "Forgotten": false,
+    "FlutterflyEntity": false,
+    "CorpseFlyEntity": false,
+    "MftfhangEntity": false,
+    "DoorKnightEntity": false,
+    "EnderMan": false,
+    "TheskeeperEntity": false,
+    "TrollEntity": false,
+    "EntityFoliaath": false,
+    "ThesomnolenceEntity": false,
+    "EntityTroll": false,
+    "BonescallerEntity": false,
+    "TheheavyEntity": false,
+    "MaggotEntity": false,
+    "PhantomCreeperEntity": false,
+    "LobberZombie": false,
+    "ThehorrorsdecoysEntity": false,
+    "HuntsmanEntity": false,
+    "TreantEntity": false,
+    "Zombie": false,
+    "SwarmerEntity": false,
+    "ZombieClownEntity": false,
+    "Lionfish_Entity": false,
+    "DireHoundLeaderEntity": false,
+    "DecrepitSkeletonEntity": false,
+    "Deepling_Angler_Entity": false,
+    "ZombieBruiserEntity": false,
+    "MutantSkeleton": false,
+    "ThepregnantEntity": false,
+    "Drowned": false,
+    "ZombieFishermanEntity": false,
+    "ThehorrorsEntity": false,
+    "MutantCreeper": false,
+    "ThehunterEntity": false,
+    "ZombieVillager": false,
+    "BarrelZombieEntity": false,
+    "ThesmokerEntity": false,
+    "MimicEntity": false,
+    "SprinterEntity": false,
+    "EntityWroughtnaut": false,
+    "SilverqueenattackingEntity": false,
+    "Creeper": false,
+    "ZombieLumberjackEntity": false,
+    "SupremeBonescallerEntity": false,
+    "TheordureEntity": false,
+    "EntityMurmur": false,
+    "ManaggresiveEntity": false,
+    "SiameseSkeletonsEntity": false,
+    "WaspEntity": false,
     "IntruderEntity": false,
     "CorpseFishEntity": false,
     "ThegliterEntity": false,
-    "CorpseFlyEntity": false,
-    "EnderMan": false,
-    "TheskeeperEntity": false,
     "FallenChaosKnightEntity": false,
-    "TrollEntity": false,
     "Skeleton": false,
     "BaseCreeper": false,
+    "GluttonFishEntity": false,
     "DarkVortexEntity": false,
-    "ThesomnolenceEntity": false,
-    "BonescallerEntity": false,
-    "PhantomCreeperEntity": false,
-    "LobberZombie": false,
+    "Witch": false,
+    "GoblinFearEntity": false,
     "INVISIBLEBIDYEntity": false,
+    "ThespitterEntity": false,
     "VampflyerEntity": false,
-    "ThehorrorsdecoysEntity": false,
+    "EntityCentipedeHead": false,
     "SkeletonDemomanEntity": false,
     "TherodEntity": false,
-    "Zombie": false,
+    "ManfromthefogEntity": false,
     "TheMoonflowerEntity": false,
-    "SwarmerEntity": false,
     "DirewolfEntity": false,
-    "ZombieClownEntity": false,
-    "DecrepitSkeletonEntity": false,
+    "Husk": false,
     "ZombifiedRabbit": false,
     "DecayingZombieEntity": false,
+    "ThebidyEntity": false,
     "DreadHoundEntity": false,
-    "ThepregnantEntity": false,
+    "Deepling_Brute_Entity": false,
     "PufferfishCreeper": false,
-    "Drowned": false,
     "VampireEntity": false,
+    "SkeletonThrasherEntity": false,
     "BoulderingZombie": false,
     "BabySkeletonEntity": false,
     "Spider": false,
     "RestlessSpiritEntity": false,
+    "TheswarmerEntity": false,
     "FallerEntity": false,
-    "SprinterEntity": false,
     "SunkenSkeletonEntity": false,
     "BomberEntity": false
   },
   "entitybasehealth": {
+    "CrawlerEntity": 20.0,
+    "NeutralCreeper": 15.0,
+    "SluggerEntity": 32.0,
+    "GoblinEntity": 20.0,
+    "MftfhangEntity": 10.0,
+    "CorpseFlyEntity": 10.0,
+    "DoorKnightEntity": 30.0,
+    "EnderMan": 40.0,
+    "TheskeeperEntity": 20.0,
+    "EntityFoliaath": 10.0,
+    "BonescallerEntity": 25.0,
     "LobberZombie": 20.0,
+    "HuntsmanEntity": 36.0,
     "Zombie": 20.0,
+    "SwarmerEntity": 40.0,
+    "DecrepitSkeletonEntity": 15.0,
+    "ZombieBruiserEntity": 60.0,
+    "Drowned": 20.0,
+    "ThehorrorsEntity": 45.0,
+    "ZombieVillager": 20.0,
+    "ThesmokerEntity": 25.0,
+    "MimicEntity": 60.0,
+    "SprinterEntity": 10.0,
     "ZombieLumberjackEntity": 25.0,
     "Creeper": 20.0,
-    "BabySkeletonEntity": 10.0,
-    "DirewolfEntity": 16.0,
-    "CrawlerEntity": 20.0,
-    "Spider": 16.0,
-    "DecrepitSkeletonEntity": 15.0,
+    "SiameseSkeletonsEntity": 20.0,
+    "WaspEntity": 16.0,
+    "IntruderEntity": 40.0,
+    "CorpseFishEntity": 12.0,
+    "ThegliterEntity": 30.0,
+    "FallenChaosKnightEntity": 40.0,
     "Skeleton": 20.0,
-    "FallerEntity": 12.0
+    "BaseCreeper": 25.0,
+    "DarkVortexEntity": 35.0,
+    "GoblinFearEntity": 1.0,
+    "INVISIBLEBIDYEntity": 100.0,
+    "ThespitterEntity": 8.0,
+    "VampflyerEntity": 30.0,
+    "SkeletonDemomanEntity": 25.0,
+    "TheMoonflowerEntity": 28.0,
+    "DirewolfEntity": 16.0,
+    "Husk": 40.0,
+    "ZombifiedRabbit": 8.0,
+    "DecayingZombieEntity": 30.0,
+    "DreadHoundEntity": 17.0,
+    "PufferfishCreeper": 16.0,
+    "SkeletonThrasherEntity": 50.0,
+    "VampireEntity": 30.0,
+    "BoulderingZombie": 20.0,
+    "BabySkeletonEntity": 10.0,
+    "Spider": 16.0,
+    "TheswarmerEntity": 45.0,
+    "RestlessSpiritEntity": 24.0,
+    "FallerEntity": 12.0,
+    "SunkenSkeletonEntity": 25.0,
+    "BomberEntity": 35.0
   }
 }
