--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -4,10 +4,34 @@
   "blockRegenIntervalMillis": 1000,
   "debugMode": false,
   "bannedBlocks": {
-    "minecraft:oak_leaves": false
+    "minecraft:oak_log": false,
+    "minecraft:andesite": false,
+    "minecraft:dirt": false,
+    "minecraft:spruce_fence": false,
+    "minecraft:oak_leaves": false,
+    "minecraft:white_wool": false,
+    "minecraft:campfire": false,
+    "minecraft:jungle_leaves": false,
+    "minecraft:jungle_log": false,
+    "minecraft:birch_log": false,
+    "minecraft:grass_block": false,
+    "minecraft:coal_ore": false,
+    "minecraft:bee_nest": false,
+    "minecraft:copper_ore": false,
+    "minecraft:stone": false,
+    "minecraft:red_bed": false,
+    "minecraft:vine": false,
+    "minecraft:birch_leaves": false
   },
   "bannedItems": {
-    "minecraft:air": false
+    "anthropology_items__structures:hunters_machete": false,
+    "minecraft:oak_log": false,
+    "tombstone:grave_key": false,
+    "minecraft:air": false,
+    "minecraft:wheat_seeds": false,
+    "minecraft:enchanted_golden_apple": false,
+    "minecraft:feather": false,
+    "alexsmobs:animal_dictionary": false
   },
   "disableForAllTileEntities": false,
   "disableAutoRegisterNames": false
