--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -119,6 +119,7 @@
     "LobberZombie": true,
     "ThehorrorsdecoysEntity": true,
     "HuntsmanEntity": true,
+    "Deepling_Entity": true,
     "TreantEntity": true,
     "Zombie": true,
     "SwarmerEntity": true,
@@ -140,6 +141,8 @@
     "ThesmokerEntity": true,
     "MimicEntity": true,
     "SprinterEntity": true,
+    "NightmareStalkerEntity": true,
+    "CaveDwellerEntity": true,
     "EntityWroughtnaut": true,
     "SilverqueenattackingEntity": true,
     "Creeper": true,
@@ -213,6 +216,7 @@
     "LobberZombie": false,
     "ThehorrorsdecoysEntity": false,
     "HuntsmanEntity": false,
+    "Deepling_Entity": false,
     "TreantEntity": false,
     "Zombie": false,
     "SwarmerEntity": false,
@@ -234,6 +238,8 @@
     "ThesmokerEntity": false,
     "MimicEntity": false,
     "SprinterEntity": false,
+    "NightmareStalkerEntity": false,
+    "CaveDwellerEntity": false,
     "EntityWroughtnaut": false,
     "SilverqueenattackingEntity": false,
     "Creeper": false,
@@ -292,9 +298,12 @@
     "EnderMan": 40.0,
     "TheskeeperEntity": 20.0,
     "EntityFoliaath": 10.0,
+    "EntityTroll": 50.0,
     "BonescallerEntity": 25.0,
     "LobberZombie": 20.0,
+    "PhantomCreeperEntity": 20.0,
     "HuntsmanEntity": 36.0,
+    "Deepling_Entity": 30.0,
     "Zombie": 20.0,
     "SwarmerEntity": 40.0,
     "DecrepitSkeletonEntity": 15.0,
@@ -305,8 +314,11 @@
     "ThesmokerEntity": 25.0,
     "MimicEntity": 60.0,
     "SprinterEntity": 10.0,
+    "SilverqueenattackingEntity": 30.0,
     "ZombieLumberjackEntity": 25.0,
     "Creeper": 20.0,
+    "SupremeBonescallerEntity": 65.0,
+    "TheordureEntity": 25.0,
     "SiameseSkeletonsEntity": 20.0,
     "WaspEntity": 16.0,
     "IntruderEntity": 40.0,
@@ -316,6 +328,7 @@
     "Skeleton": 20.0,
     "BaseCreeper": 25.0,
     "DarkVortexEntity": 35.0,
+    "Witch": 26.0,
     "GoblinFearEntity": 1.0,
     "INVISIBLEBIDYEntity": 100.0,
     "ThespitterEntity": 8.0,
@@ -326,6 +339,7 @@
     "Husk": 40.0,
     "ZombifiedRabbit": 8.0,
     "DecayingZombieEntity": 30.0,
+    "ThebidyEntity": 10.0,
     "DreadHoundEntity": 17.0,
     "PufferfishCreeper": 16.0,
     "SkeletonThrasherEntity": 50.0,
