--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -4,33 +4,49 @@
   "blockRegenIntervalMillis": 1000,
   "debugMode": false,
   "bannedBlocks": {
+    "minecraft:crafting_table": false,
     "minecraft:oak_log": false,
-    "minecraft:andesite": false,
     "minecraft:dirt": false,
-    "minecraft:spruce_fence": false,
-    "minecraft:oak_leaves": false,
-    "minecraft:white_wool": false,
-    "minecraft:campfire": false,
-    "minecraft:jungle_leaves": false,
-    "minecraft:jungle_log": false,
     "minecraft:birch_log": false,
     "minecraft:grass_block": false,
     "minecraft:coal_ore": false,
     "minecraft:bee_nest": false,
+    "minecraft:gravel": false,
+    "minecraft:vine": false,
+    "minecraft:glow_lichen": false,
+    "minecraft:andesite": false,
+    "minecraft:spruce_fence": false,
+    "minecraft:oak_leaves": false,
+    "minecraft:granite": false,
+    "minecraft:white_wool": false,
+    "minecraft:campfire": false,
+    "minecraft:jungle_leaves": false,
+    "minecraft:jungle_log": false,
+    "minecraft:cobblestone": false,
     "minecraft:copper_ore": false,
+    "minecraft:diorite": false,
     "minecraft:stone": false,
     "minecraft:red_bed": false,
-    "minecraft:vine": false,
-    "minecraft:birch_leaves": false
+    "minecraft:birch_leaves": false,
+    "minecraft:iron_ore": false
   },
   "bannedItems": {
     "anthropology_items__structures:hunters_machete": false,
     "minecraft:oak_log": false,
+    "born_in_chaos_v1:corpse_maggot": false,
+    "minecraft:iron_axe": false,
+    "minecraft:wheat_seeds": false,
+    "born_in_chaos_v1:ethereal_spirit": false,
+    "minecraft:enchanted_golden_apple": false,
+    "minecraft:iron_pickaxe": false,
+    "minecraft:cobblestone": false,
+    "tombstone:grave_dust": false,
     "tombstone:grave_key": false,
     "minecraft:air": false,
-    "minecraft:wheat_seeds": false,
-    "minecraft:enchanted_golden_apple": false,
+    "minecraft:chest": false,
+    "minecraft:wooden_pickaxe": false,
     "minecraft:feather": false,
+    "minecraft:stone_pickaxe": false,
     "alexsmobs:animal_dictionary": false
   },
   "disableForAllTileEntities": false,
