--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -96,216 +96,228 @@
   "permittedentities": {
     "InvisicloggerEntity": true,
     "EntityMurmurHead": true,
-    "CrawlerEntity": true,
-    "NeutralCreeper": true,
-    "SluggerEntity": true,
-    "EquestrianEntity": true,
     "GoblinEntity": true,
     "Forgotten": true,
     "FlutterflyEntity": true,
     "CorpseFlyEntity": true,
-    "MftfhangEntity": true,
-    "DoorKnightEntity": true,
-    "EnderMan": true,
-    "TheskeeperEntity": true,
-    "TrollEntity": true,
+    "HouseflyEntity": true,
     "EntityFoliaath": true,
-    "ThesomnolenceEntity": true,
-    "EntityTroll": true,
-    "BonescallerEntity": true,
     "TheheavyEntity": true,
-    "MaggotEntity": true,
-    "PhantomCreeperEntity": true,
     "LobberZombie": true,
-    "ThehorrorsdecoysEntity": true,
     "HuntsmanEntity": true,
-    "Deepling_Entity": true,
     "TreantEntity": true,
-    "Zombie": true,
-    "SwarmerEntity": true,
-    "ZombieClownEntity": true,
+    "SuckerEntity": true,
     "Lionfish_Entity": true,
     "DireHoundLeaderEntity": true,
     "DecrepitSkeletonEntity": true,
-    "Deepling_Angler_Entity": true,
     "ZombieBruiserEntity": true,
     "MutantSkeleton": true,
     "ThepregnantEntity": true,
-    "Drowned": true,
-    "ZombieFishermanEntity": true,
     "ThehorrorsEntity": true,
     "MutantCreeper": true,
     "ThehunterEntity": true,
     "ZombieVillager": true,
     "BarrelZombieEntity": true,
-    "ThesmokerEntity": true,
-    "MimicEntity": true,
     "SprinterEntity": true,
     "NightmareStalkerEntity": true,
     "CaveDwellerEntity": true,
     "EntityWroughtnaut": true,
     "SilverqueenattackingEntity": true,
-    "Creeper": true,
     "ZombieLumberjackEntity": true,
-    "SupremeBonescallerEntity": true,
-    "TheordureEntity": true,
-    "EntityMurmur": true,
     "ManaggresiveEntity": true,
     "SiameseSkeletonsEntity": true,
     "WaspEntity": true,
-    "IntruderEntity": true,
     "CorpseFishEntity": true,
+    "DarkVortexEntity": true,
+    "Witch": true,
+    "GoblinFearEntity": true,
+    "TherodEntity": true,
+    "Husk": true,
+    "ThebidyEntity": true,
+    "DreadHoundEntity": true,
+    "VampireEntity": true,
+    "BoulderingZombie": true,
+    "BabySkeletonEntity": true,
+    "RestlessSpiritEntity": true,
+    "TheswarmerEntity": true,
+    "BomberEntity": true,
+    "CrawlerEntity": true,
+    "NeutralCreeper": true,
+    "SluggerEntity": true,
+    "EquestrianEntity": true,
+    "MftfhangEntity": true,
+    "DoorKnightEntity": true,
+    "EnderMan": true,
+    "TheskeeperEntity": true,
+    "TrollEntity": true,
+    "ThesomnolenceEntity": true,
+    "EntityTroll": true,
+    "BonescallerEntity": true,
+    "MaggotEntity": true,
+    "PhantomCreeperEntity": true,
+    "ThehorrorsdecoysEntity": true,
+    "Deepling_Entity": true,
+    "Zombie": true,
+    "SwarmerEntity": true,
+    "ZombieClownEntity": true,
+    "Deepling_Angler_Entity": true,
+    "Drowned": true,
+    "ZombieFishermanEntity": true,
+    "ThesmokerEntity": true,
+    "MimicEntity": true,
+    "Creeper": true,
+    "SupremeBonescallerEntity": true,
+    "TheordureEntity": true,
+    "EntityMurmur": true,
+    "IntruderEntity": true,
     "ThegliterEntity": true,
     "FallenChaosKnightEntity": true,
     "Skeleton": true,
     "BaseCreeper": true,
     "GluttonFishEntity": true,
-    "DarkVortexEntity": true,
-    "Witch": true,
-    "GoblinFearEntity": true,
     "INVISIBLEBIDYEntity": true,
     "ThespitterEntity": true,
     "VampflyerEntity": true,
     "EntityCentipedeHead": true,
     "SkeletonDemomanEntity": true,
-    "TherodEntity": true,
     "ManfromthefogEntity": true,
     "TheMoonflowerEntity": true,
     "DirewolfEntity": true,
-    "Husk": true,
+    "TrollenragedEntity": true,
     "ZombifiedRabbit": true,
     "DecayingZombieEntity": true,
-    "ThebidyEntity": true,
-    "DreadHoundEntity": true,
     "Deepling_Brute_Entity": true,
     "PufferfishCreeper": true,
-    "VampireEntity": true,
     "SkeletonThrasherEntity": true,
-    "BoulderingZombie": true,
-    "BabySkeletonEntity": true,
     "Spider": true,
-    "RestlessSpiritEntity": true,
-    "TheswarmerEntity": true,
     "FallerEntity": true,
-    "SunkenSkeletonEntity": true,
-    "BomberEntity": true
+    "SunkenSkeletonEntity": true
   },
   "entitiesalwaysinfernal": {
     "InvisicloggerEntity": false,
     "EntityMurmurHead": false,
-    "CrawlerEntity": false,
-    "NeutralCreeper": false,
-    "SluggerEntity": false,
-    "EquestrianEntity": false,
     "GoblinEntity": false,
     "Forgotten": false,
     "FlutterflyEntity": false,
     "CorpseFlyEntity": false,
-    "MftfhangEntity": false,
-    "DoorKnightEntity": false,
-    "EnderMan": false,
-    "TheskeeperEntity": false,
-    "TrollEntity": false,
+    "HouseflyEntity": false,
     "EntityFoliaath": false,
-    "ThesomnolenceEntity": false,
-    "EntityTroll": false,
-    "BonescallerEntity": false,
     "TheheavyEntity": false,
-    "MaggotEntity": false,
-    "PhantomCreeperEntity": false,
     "LobberZombie": false,
-    "ThehorrorsdecoysEntity": false,
     "HuntsmanEntity": false,
-    "Deepling_Entity": false,
     "TreantEntity": false,
-    "Zombie": false,
-    "SwarmerEntity": false,
-    "ZombieClownEntity": false,
+    "SuckerEntity": false,
     "Lionfish_Entity": false,
     "DireHoundLeaderEntity": false,
     "DecrepitSkeletonEntity": false,
-    "Deepling_Angler_Entity": false,
     "ZombieBruiserEntity": false,
     "MutantSkeleton": false,
     "ThepregnantEntity": false,
-    "Drowned": false,
-    "ZombieFishermanEntity": false,
     "ThehorrorsEntity": false,
     "MutantCreeper": false,
     "ThehunterEntity": false,
     "ZombieVillager": false,
     "BarrelZombieEntity": false,
-    "ThesmokerEntity": false,
-    "MimicEntity": false,
     "SprinterEntity": false,
     "NightmareStalkerEntity": false,
     "CaveDwellerEntity": false,
     "EntityWroughtnaut": false,
     "SilverqueenattackingEntity": false,
-    "Creeper": false,
     "ZombieLumberjackEntity": false,
-    "SupremeBonescallerEntity": false,
-    "TheordureEntity": false,
-    "EntityMurmur": false,
     "ManaggresiveEntity": false,
     "SiameseSkeletonsEntity": false,
     "WaspEntity": false,
-    "IntruderEntity": false,
     "CorpseFishEntity": false,
+    "DarkVortexEntity": false,
+    "Witch": false,
+    "GoblinFearEntity": false,
+    "TherodEntity": false,
+    "Husk": false,
+    "ThebidyEntity": false,
+    "DreadHoundEntity": false,
+    "VampireEntity": false,
+    "BoulderingZombie": false,
+    "BabySkeletonEntity": false,
+    "RestlessSpiritEntity": false,
+    "TheswarmerEntity": false,
+    "BomberEntity": false,
+    "CrawlerEntity": false,
+    "NeutralCreeper": false,
+    "SluggerEntity": false,
+    "EquestrianEntity": false,
+    "MftfhangEntity": false,
+    "DoorKnightEntity": false,
+    "EnderMan": false,
+    "TheskeeperEntity": false,
+    "TrollEntity": false,
+    "ThesomnolenceEntity": false,
+    "EntityTroll": false,
+    "BonescallerEntity": false,
+    "MaggotEntity": false,
+    "PhantomCreeperEntity": false,
+    "ThehorrorsdecoysEntity": false,
+    "Deepling_Entity": false,
+    "Zombie": false,
+    "SwarmerEntity": false,
+    "ZombieClownEntity": false,
+    "Deepling_Angler_Entity": false,
+    "Drowned": false,
+    "ZombieFishermanEntity": false,
+    "ThesmokerEntity": false,
+    "MimicEntity": false,
+    "Creeper": false,
+    "SupremeBonescallerEntity": false,
+    "TheordureEntity": false,
+    "EntityMurmur": false,
+    "IntruderEntity": false,
     "ThegliterEntity": false,
     "FallenChaosKnightEntity": false,
     "Skeleton": false,
     "BaseCreeper": false,
     "GluttonFishEntity": false,
-    "DarkVortexEntity": false,
-    "Witch": false,
-    "GoblinFearEntity": false,
     "INVISIBLEBIDYEntity": false,
     "ThespitterEntity": false,
     "VampflyerEntity": false,
     "EntityCentipedeHead": false,
     "SkeletonDemomanEntity": false,
-    "TherodEntity": false,
     "ManfromthefogEntity": false,
     "TheMoonflowerEntity": false,
     "DirewolfEntity": false,
-    "Husk": false,
+    "TrollenragedEntity": false,
     "ZombifiedRabbit": false,
     "DecayingZombieEntity": false,
-    "ThebidyEntity": false,
-    "DreadHoundEntity": false,
     "Deepling_Brute_Entity": false,
     "PufferfishCreeper": false,
-    "VampireEntity": false,
     "SkeletonThrasherEntity": false,
-    "BoulderingZombie": false,
-    "BabySkeletonEntity": false,
     "Spider": false,
-    "RestlessSpiritEntity": false,
-    "TheswarmerEntity": false,
     "FallerEntity": false,
-    "SunkenSkeletonEntity": false,
-    "BomberEntity": false
+    "SunkenSkeletonEntity": false
   },
   "entitybasehealth": {
     "CrawlerEntity": 20.0,
     "NeutralCreeper": 15.0,
     "SluggerEntity": 32.0,
     "GoblinEntity": 20.0,
+    "Forgotten": 60.0,
     "MftfhangEntity": 10.0,
     "CorpseFlyEntity": 10.0,
     "DoorKnightEntity": 30.0,
     "EnderMan": 40.0,
     "TheskeeperEntity": 20.0,
+    "TrollEntity": 50.0,
+    "HouseflyEntity": 4.0,
     "EntityFoliaath": 10.0,
     "EntityTroll": 50.0,
+    "ThesomnolenceEntity": 10.0,
     "BonescallerEntity": 25.0,
+    "TheheavyEntity": 110.0,
     "LobberZombie": 20.0,
     "PhantomCreeperEntity": 20.0,
     "HuntsmanEntity": 36.0,
     "Deepling_Entity": 30.0,
     "Zombie": 20.0,
     "SwarmerEntity": 40.0,
+    "ZombieClownEntity": 35.0,
     "DecrepitSkeletonEntity": 15.0,
     "ZombieBruiserEntity": 60.0,
     "Drowned": 20.0,
