--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -13,6 +13,7 @@
     "minecraft:bee_nest": false,
     "minecraft:gravel": false,
     "minecraft:vine": false,
+    "minecraft:air": false,
     "minecraft:glow_lichen": false,
     "minecraft:andesite": false,
     "minecraft:spruce_fence": false,
@@ -34,6 +35,7 @@
     "anthropology_items__structures:hunters_machete": false,
     "minecraft:oak_log": false,
     "born_in_chaos_v1:corpse_maggot": false,
+    "securitycraft:reinforced_tinted_glass": false,
     "minecraft:iron_axe": false,
     "minecraft:wheat_seeds": false,
     "born_in_chaos_v1:ethereal_spirit": false,
