--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -102,6 +102,7 @@
     "CorpseFlyEntity": true,
     "HouseflyEntity": true,
     "EntityFoliaath": true,
+    "Pillager": true,
     "TheheavyEntity": true,
     "LobberZombie": true,
     "HuntsmanEntity": true,
@@ -150,6 +151,7 @@
     "EnderMan": true,
     "TheskeeperEntity": true,
     "TrollEntity": true,
+    "InvisicreeperEntity": true,
     "ThesomnolenceEntity": true,
     "EntityTroll": true,
     "BonescallerEntity": true,
@@ -171,12 +173,14 @@
     "EntityMurmur": true,
     "IntruderEntity": true,
     "ThegliterEntity": true,
+    "Marauder": true,
     "FallenChaosKnightEntity": true,
     "Skeleton": true,
     "BaseCreeper": true,
     "GluttonFishEntity": true,
     "INVISIBLEBIDYEntity": true,
     "ThespitterEntity": true,
+    "MutantZombie": true,
     "VampflyerEntity": true,
     "EntityCentipedeHead": true,
     "SkeletonDemomanEntity": true,
@@ -202,6 +206,7 @@
     "CorpseFlyEntity": false,
     "HouseflyEntity": false,
     "EntityFoliaath": false,
+    "Pillager": false,
     "TheheavyEntity": false,
     "LobberZombie": false,
     "HuntsmanEntity": false,
@@ -250,6 +255,7 @@
     "EnderMan": false,
     "TheskeeperEntity": false,
     "TrollEntity": false,
+    "InvisicreeperEntity": false,
     "ThesomnolenceEntity": false,
     "EntityTroll": false,
     "BonescallerEntity": false,
@@ -271,12 +277,14 @@
     "EntityMurmur": false,
     "IntruderEntity": false,
     "ThegliterEntity": false,
+    "Marauder": false,
     "FallenChaosKnightEntity": false,
     "Skeleton": false,
     "BaseCreeper": false,
     "GluttonFishEntity": false,
     "INVISIBLEBIDYEntity": false,
     "ThespitterEntity": false,
+    "MutantZombie": false,
     "VampflyerEntity": false,
     "EntityCentipedeHead": false,
     "SkeletonDemomanEntity": false,
