--- a/servidor_minecraft/config/multimine.cfg
+++ b/servidor_minecraft/config/multimine.cfg
@@ -6,6 +6,7 @@
   "bannedBlocks": {
     "minecraft:crafting_table": false,
     "minecraft:oak_log": false,
+    "minecraft:quartz_block": false,
     "minecraft:dirt": false,
     "minecraft:birch_log": false,
     "minecraft:grass_block": false,
@@ -13,10 +14,15 @@
     "minecraft:bee_nest": false,
     "minecraft:gravel": false,
     "minecraft:vine": false,
+    "minecraft:deepslate_redstone_ore": false,
     "minecraft:air": false,
+    "minecraft:deepslate_iron_ore": false,
+    "minecraft:deepslate_diamond_ore": false,
+    "securitycraft:reinforced_tinted_glass": false,
     "minecraft:glow_lichen": false,
     "minecraft:andesite": false,
     "minecraft:spruce_fence": false,
+    "minecraft:deepslate": false,
     "minecraft:oak_leaves": false,
     "minecraft:granite": false,
     "minecraft:white_wool": false,
@@ -25,13 +31,19 @@
     "minecraft:jungle_log": false,
     "minecraft:cobblestone": false,
     "minecraft:copper_ore": false,
+    "minecraft:diamond_ore": false,
     "minecraft:diorite": false,
     "minecraft:stone": false,
     "minecraft:red_bed": false,
     "minecraft:birch_leaves": false,
-    "minecraft:iron_ore": false
+    "minecraft:redstone_ore": false,
+    "minecraft:cocoa": false,
+    "minecraft:iron_ore": false,
+    "minecraft:oak_door": false
   },
   "bannedItems": {
+    "securitycraft:universal_block_reinforcer_lvl1": false,
+    "minecraft:crafting_table": false,
     "anthropology_items__structures:hunters_machete": false,
     "minecraft:oak_log": false,
     "born_in_chaos_v1:corpse_maggot": false,
@@ -39,9 +51,13 @@
     "minecraft:iron_axe": false,
     "minecraft:wheat_seeds": false,
     "born_in_chaos_v1:ethereal_spirit": false,
+    "securitycraft:universal_block_remover": false,
     "minecraft:enchanted_golden_apple": false,
     "minecraft:iron_pickaxe": false,
     "minecraft:cobblestone": false,
+    "minecraft:jungle_log": false,
+    "minecraft:diamond_pickaxe": false,
+    "minecraft:diorite": false,
     "tombstone:grave_dust": false,
     "tombstone:grave_key": false,
     "minecraft:air": false,
