--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -371,6 +371,7 @@
     "RestlessSpiritEntity": 24.0,
     "FallerEntity": 12.0,
     "SunkenSkeletonEntity": 25.0,
-    "BomberEntity": 35.0
+    "BomberEntity": 35.0,
+    "ThehorrorsdecoysEntity": 50.0
   }
 }
